# hermes-prompt-vault

./: .gitignore  README.md  __init__.py  hermes-prompt-vault-audit.xml  plugin.yaml  pyproject.toml
dashboard/: manifest.json  package-lock.json  package.json  plugin_api.py
dashboard/src/: index.jsx
